LAYOUT:: Added fontrun navbar

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,89 @@
 </head>
 <body>
   
+  <nav id="fr-menu">
+    <div class="fr-brand">
+      <img src="fontrun-logo.png" alt="fontrun">
+    </div>
+
+    <div class="fr-font-select">
+      <h1 class="fr-titles">Selected fonts</h1>
+      <ul>
+        <li>
+          <h4 class="fr-titles">MAIN FONT</h4>
+          <h2 class="fr-titles">Encode Sans</h2>
+        </li>
+        <li>
+          <h4 class="fr-titles">SECONDARY FONT</h4>
+          <h2 class="fr-titles">Futura</h2>
+        </li>
+      </ul>
+    </div>
+    
+    <div class="fr-color-select">
+      <h1 class="fr-titles">Color pallette</h1>
+      <ul>
+        <li>
+          <div class="fr-main-colors">
+            <div class="fr-color-1"></div>
+            <div class="fr-color-2"></div>
+            <div class="fr-color-3"></div>
+          </div>
+          <div class="fr-gray-colors">
+            <div class="fr-gray-1"></div>
+            <div class="fr-gray-2"></div>
+          </div>
+        </li>
+        <li>
+          <div class="fr-main-colors">
+            <div class="fr-color-1"></div>
+            <div class="fr-color-2"></div>
+            <div class="fr-color-3"></div>
+          </div>
+          <div class="fr-gray-colors">
+            <div class="fr-gray-1"></div>
+            <div class="fr-gray-2"></div>
+          </div>
+        </li>
+        <li>
+          <div class="fr-main-colors">
+            <div class="fr-color-1"></div>
+            <div class="fr-color-2"></div>
+            <div class="fr-color-3"></div>
+          </div>
+          <div class="fr-gray-colors">
+            <div class="fr-gray-1"></div>
+            <div class="fr-gray-2"></div>
+          </div>
+        </li>
+        <li>
+          <div class="fr-main-colors">
+            <div class="fr-color-1"></div>
+            <div class="fr-color-2"></div>
+            <div class="fr-color-3"></div>
+          </div>
+          <div class="fr-gray-colors">
+            <div class="fr-gray-1"></div>
+            <div class="fr-gray-2"></div>
+          </div>
+        </li>
+        <li>
+          <div class="fr-main-colors">
+            <div class="fr-color-1"></div>
+            <div class="fr-color-2"></div>
+            <div class="fr-color-3"></div>
+          </div>
+          <div class="fr-gray-colors">
+            <div class="fr-gray-1"></div>
+            <div class="fr-gray-2"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+<div class="site-wrapper">
+
   <div id="fontsVersus">
     <div class="wrapper">
       <span class="vsBig1">Juliet</span>
@@ -387,6 +470,8 @@
       </div>
     </div>
   </footer>
+
+</div>
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
