FR NAVBAR:: Fonts selector uses selected fonts

--- a/app/index.html
+++ b/app/index.html
@@ -33,11 +33,11 @@
     <div class="fr-font-select">
       <h1 class="fr-titles">Selected fonts</h1>
       <ul>
-        <li>
+        <li class="fr-font-select-main">
           <h4 class="fr-titles">MAIN FONT</h4>
-          <h2 class="fr-titles">Encode Sans</h2>
+          <h2 class="fr-titles">Akzidenz Grotesk</h2>
         </li>
-        <li>
+        <li class="fr-font-select-secondary">
           <h4 class="fr-titles">SECONDARY FONT</h4>
           <h2 class="fr-titles">Futura</h2>
         </li>
