--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,13 @@
   <meta name="description" content="Test your color palette and fonts with this app">
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="/favicon.ico">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- build:css styles/vendor.css -->
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
   <!-- bower:css -->
