Add button to reload random words. Add logic to save schemes to localStorage

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
   <script src="scripts/controllers/main-controller.js"></script>
   <script src="scripts/controllers/menu-controller.js"></script>
 
+  <script src="scripts/services/scheme-service.js"></script>
   <script src="scripts/services/random-word-service.js"></script>
 
   <script src="scripts/filters/font-name-filter.js"></script>
