Added actions panel. Added sharing current scheme action. Added share all saved schemes action. Added load shared schemes action. Added about me info and hotkeys. Added hover transitions to different panel items. Built projects

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-  <ng-include src="'partials/side-menu.html'"></ng-include>
+  <ng-include src="'partials/ui.html'"></ng-include>
 
   <main ng-view class="site__wrapper" ng-class="{ 'site__wrapper--menu' : controls.showSideMenu }"></main>
 
@@ -60,6 +60,7 @@
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
   <script src="bower_components/underscore/underscore-min.js"></script>
+  <script src="bower_components/angular-clipboard/angular-clipboard.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
