--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-  <ng-include src="'partials/ui.html'"></ng-include>
+  <ng-include src="'components/ui/ui.html'"></ng-include>
 
   <main ng-view class="site__wrapper" ng-class="{ 'site__wrapper--menu' : controls.showSideMenu }"></main>
 
@@ -77,7 +77,7 @@
   <!-- build:js({app,.tmp}) scripts/main.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main-controller.js"></script>
-  <script src="scripts/controllers/menu-controller.js"></script>
+  <script src="components/ui/ui-controller.js"></script>
 
   <script src="scripts/services/scheme-service.js"></script>
   <script src="scripts/services/random-content-service.js"></script>
