Adds BEM to more CSS, refactored CSS. Removes bootstrap. Adds popup component. Adds blur and keyboard evento for font inputs.

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
   <script src="scripts/controllers/main-controller.js"></script>
   <script src="components/ui/ui-component.js"></script>
   <script src="components/modal/modal-component.js"></script>
+  <script src="components/popup/popup-component.js"></script>
 
   <script src="scripts/services/scheme-service.js"></script>
   <script src="scripts/services/random-content-service.js"></script>
