Adds npm scripts. Fixes add schemes functionality. Fixes some visual and functionality errors

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     .site__wrapper	h4,
     .site__wrapper	h5,
     .site__wrapper .font__primary {
-  		font-family: {{ fonts.primary | fontName }};
+  		font-family: {{ fonts.primary }};
   	}
 
     .site__wrapper	h3,
@@ -44,7 +44,7 @@
     .section__badge::before,
     .site__wrapper input[type='text'],
     .site__wrapper textarea {
-  		font-family: {{ fonts.secondary | fontName }};
+  		font-family: {{ fonts.secondary }};
   	}
   </style>
 </head>
